feat: services animation

--- a/angular/src/app/views/public/home/home.component.html
+++ b/angular/src/app/views/public/home/home.component.html
@@ -10,20 +10,100 @@
   <div class="dot2-inner absolute left-1/4 top-1/4">
   </div> -->
 
-  <section class="container mx-auto px-5 header-padding text-white">
-    <section class="border-2 screen-height-no-header px-10 flex items-center">
-      <section class="mt-8 grid grid-cols-2">
-        <div>
-          <h1 class="text-[4rem] leading-none mb-3">
-            <span class="font-extralight">Idea,<br></span>
-            <span class="font-extralight">Crea,<br></span>
-            <span class="font-bold">Innova</span>
+  <section class="container max-w-7xl mx-auto px-5 header-padding text-white mb-8">
+    <section class="screen-height-no-header px-10 ">
+
+      <section class="pt-10 grid grid-cols-1 mb-8">
+        <div class="">
+          <h1 class="text-[4rem] leading-none mb-3 text-center">
+            <span class="font-extralight">
+              Expertos en
+            </span>
+            <span class="font-bold">Idear, Crear e </span>
+            <span class="font-bold text-gradient">Innovar</span>
           </h1>
-          <p>
+          
+          <p class="text-center text-slate-500 mt-10 text-3xl">
             En Ofnos, desarrollamos software personalizado con la mejor calidad enfocado en satisfacer todas las necesidades de nuestros clientes.
           </p>
+          <div class="text-center mt-6">
+            <button class="rounded-full text-white bg-sky-600 py-3 px-5">
+              Contactanos
+            </button>
+          </div>
         </div>
       </section>
+
+      
+
+      <section class="rounded-xl my-10 bg-[#243748] shadow-2xl">
+        <h2 class="px-4 pt-4 text-[3rem] text-gradient font-extrabold">
+          Servicios
+        </h2>
+        <hr class="mx-4 mb-4 rounded-full border-primary">
+        <div class="wrapper pb-10">
+          <div class="card-container">
+            <input type="radio" name="slide" id="c1" checked>
+            <label for="c1" class="card">
+              <div class="row card-title">
+                <div class="icon">1</div>
+                <div class="description">
+                  <h4>Software a la medida</h4>
+                  <p>Creamos soluciones específicas a cualquier tipo de necesidad.</p>
+                </div>
+              </div>
+            </label>
+            <input type="radio" name="slide" id="c2">
+            <label for="c2" class="card">
+              <div class="row card-title">
+                <div class="icon">2</div>
+                <div class="description">
+                  <h4>Soluciones listas</h4>
+                  <p>Contamos con diversas aplicaciones listas para ser utilizadas.</p>
+                </div>
+              </div>
+            </label>
+            <input type="radio" name="slide" id="c3">
+            <label for="c3" class="card">
+              <div class="row card-title">
+                <div class="icon">3</div>
+                <div class="description">
+                  <h4>Automatización de procesos</h4>
+                  <p>Ideamos formas de automatizar tareas en cualquier flujo de trabajo.</p>
+                </div>
+              </div>
+            </label>
+            <input type="radio" name="slide" id="c4">
+            <label for="c4" class="card">
+              <div class="row card-title">
+                <div class="icon">4</div>
+                <div class="description">
+                  <h4>Soporte</h4>
+                  <p>Ofrecemos servicios de soporte relacionados al área de IT.</p>
+                </div>
+              </div>
+            </label>
+          </div>
+        </div>
+      </section>
+
+      <section class="shadow-2xl mx-auto rounded-xl  md:w-3/4 lg:w-2/4 neo py-8 px-4">
+        <h2 class="text-center text-[3rem] text-primary font-light">
+          NUESTRA MISIÓN
+        </h2>
+        <div class="flex flex-col">
+          <div class="my-auto">
+            <p class="text-xl text-slate-500 text-center">
+              Idear e implementar software enfocado en mejorar la productividad y descubrir
+              nuevas formas de eficientar el trabajo de nuestros clientes.
+            </p>
+            <div class="flex mt-3">
+              <img src="../../../../assets/images/logo/logo.png" height="100px" width="100px" class="mx-auto" alt="Ofnos">
+            </div>
+          </div>
+        </div>
+      </section>
+
     </section>
   </section>
 </section>
