--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -3,13 +3,21 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Forum&display=swap&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import 'material-icons/iconfont/material-icons.css';
 
 
 $header-height: 64px; 
+
+$space-color: rgba(17, 26, 34, 1);
+$primary-color: rgb(66, 105, 170);
+$primary-light-color: rgb(115, 136, 169);
+$secondary-color: rgb(211, 212, 217);
+
+
 body {
   font-family: Raleway, Arial, Helvetica, sans-serif;
+  background: $space-color;
 }
 
 .header-padding {
@@ -22,11 +30,23 @@ body {
 
 /* ------ COLORS ------ */
 .text-primary {
-  color: rgb(66, 105, 170);
+  color: $primary-color;
 }
 
 .text-light-primary {
   color: rgb(115, 136, 169)
+}
+
+.border-primary {
+  border-color: $primary-color;
+}
+
+.border-light-primary {
+  border-color: rgb(115, 136, 169)
+}
+
+.bg-primary {
+  background: $primary-color;
 }
 /* -------------------- */
 
