--- a/angular/src/app/views/public/home/home.component.scss
+++ b/angular/src/app/views/public/home/home.component.scss
@@ -1,10 +1,3 @@
-$space-color: rgba(17, 26, 34, 1);
-
-.space-background {
-  background: $space-color;
-  width: 100vw;
-  height: 100vh;
-}
 
 .dot1 {
   border-radius: 50%;
@@ -30,4 +23,163 @@ $space-color: rgba(17, 26, 34, 1);
   border-radius: 50%;
   display: inline-block;
   box-shadow: 0 0 50px 40px rgba(43, 38, 73, 0.4);
+}
+
+.text-gradient {
+  background: linear-gradient(90deg, rgb(123, 68, 238) 0%, rgb(208, 176, 20) 35%, rgb(156, 60, 57) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.neo {
+  background: #111a22;
+  box-shadow: 10px 10px 20px #0c1218,
+              -10px -10px 20px #16222c;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-container {
+  height: 400px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: start;
+}
+
+.card {
+  width: 80px;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 2rem;
+  margin: 0 10px;
+  display: flex;
+  align-items: flex-end;
+  transition: .6s cubic-bezier(.28, -0.03, 0, .99);
+  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+}
+
+.card>.row {
+  color: white;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.card>.row>.icon {
+  background: #223;
+  color: white;
+  border-radius: 50%;
+  width: 50px;
+  min-width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
+}
+
+.card>.row>.description {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+  height: 80px;
+  width: 520px;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all .3s ease;
+}
+
+.description p {
+  color: #b0b0ba;
+  padding-top: 5px;
+}
+
+.description h4 {
+  text-transform: uppercase;
+}
+
+input {
+  display: none;
+}
+
+input:checked+label {
+  width: 600px;
+}
+
+input:checked+label .description {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+}
+
+.card[for="c1"] {
+  background-image: url('./bullseye.webp');
+}
+
+.card[for="c2"] {
+  background-image: url('./graph.jpg');
+}
+
+.card[for="c3"] {
+  background-image: url('./robot.jpg');
+}
+
+.card[for="c4"] {
+  background-image: url('./img1.webp');
+}
+
+.card-title{
+  background: rgb(36, 55, 72);
+  background: linear-gradient(180deg, rgba(36, 55, 72, 0) 0%, rgba(55, 84, 110, 1) 8%, rgba(36, 55, 72, 1) 94%);
+}
+
+@media only screen and (max-width: 1090px) {
+  .card-container {
+    flex-direction: column;
+    width: 100%;
+    height: 1600px;
+  }
+
+  .card {
+    height: 400px;
+    margin: 1rem 20px;
+  }
+  
+  .card-title {
+    width: 100%;
+  }
+
+  input:checked+label {
+    width: calc(100% - 40px);
+  }
+
+  input:checked+label .row>.description {
+    opacity: 1 !important;
+    height: auto;
+    margin: 10px 0;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  input:checked+label .card-title {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  input:checked+label .card-title>.icon {
+    margin: 20px 15px 0px 15px;
+  }
+
+  input:checked+label .row>.description {
+    text-align: center;
+    max-width: calc(100% - 30px);
+    margin: 10px 15px;
+  }
 }
