--- a/angular/src/app/views/public/home/home.component.html
+++ b/angular/src/app/views/public/home/home.component.html
@@ -5,17 +5,14 @@
   <div class="dot1-inner absolute right-1/4 -top-1/4">
   </div>
 
-  <!-- <div class="dot2 absolute left-1/4 top-1/4">
+  <div class="dot1 absolute left-30 -bottom-1/4">
   </div>
-  <div class="dot2-inner absolute left-1/4 top-1/4">
-  </div> -->
 
   <section class="container max-w-7xl mx-auto px-5 header-padding text-white mb-8">
-    <section class="screen-height-no-header px-10 ">
-
-      <section class="pt-10 grid grid-cols-1 mb-8">
+    <section class="screen-height-no-header px-10 flex items-center min-h-[580px] sm:min-h-full">
+      <section class="pt-10 mb-8">
         <div class="">
-          <h1 class="text-[4rem] leading-none mb-3 text-center">
+          <h1 class="text-[3rem] sm:text-[4rem] leading-none mb-3 text-center">
             <span class="font-extralight">
               Expertos en
             </span>
@@ -23,7 +20,7 @@
             <span class="font-bold text-gradient">Innovar</span>
           </h1>
           
-          <p class="text-center text-slate-500 mt-10 text-3xl">
+          <p class="text-center text-slate-500 mt-10 text-xl sm:text-2xl">
             En Ofnos, desarrollamos software personalizado con la mejor calidad enfocado en satisfacer todas las necesidades de nuestros clientes.
           </p>
           <div class="text-center mt-6">
@@ -33,18 +30,42 @@
           </div>
         </div>
       </section>
+    </section>
+  </section>
+  
 
-      
-
-      <section class="rounded-xl my-10 bg-[#243748] shadow-2xl">
-        <h2 class="px-4 pt-4 text-[3rem] text-gradient font-extrabold">
+  <section class="mx-auto px-5 text-white bg-[#0f171d] relative">
+    <svg class="absolute inset-0" width="100%" height="100%"
+      xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <pattern id="servicesPattern" patternUnits="userSpaceOnUse" width="60" height="60"
+          patternTransform="scale(0.4) rotate(0)">
+          <rect x="0" y="0" width="100%" height="100%" fill="transparent"></rect>
+          <path
+            d="M 4.95 2.7 a 2.25 2.25 90 0 1 -2.25 2.25 a 2.25 2.25 90 0 1 -2.25 -2.25 a 2.25 2.25 90 0 1 2.25 -2.25 a 2.25 2.25 90 0 1 2.25 2.25"
+            stroke-width="1" stroke="none" fill="rgb(38, 59, 77)"></path>
+        </pattern>
+      </defs>
+      <rect width="100%" height="100%" transform="translate(15,20)" fill="url(#servicesPattern)"></rect>
+    </svg>
+    <section class="relative">
+      <div class="mx-4 my-5 text-center">
+        <h2 class="pt-6 text-sky-600 font-bold">
           Servicios
         </h2>
-        <hr class="mx-4 mb-4 rounded-full border-primary">
-        <div class="wrapper pb-10">
-          <div class="card-container">
+        <h3 class="text-[3rem] my-4 font-extrabold leading-none">
+          Nuestro trabajo
+        </h3>
+        <p class="text-slate-400">
+          Con experiencia en múltiples áreas, ofrecemos una gran variedad de 
+          soluciones para satisfacer cualquier necesidad tecnológica.
+        </p>
+      </div>
+      <div class="wrapper pb-10">
+        <div class="card-container">
+          <div #carrouseloption>
             <input type="radio" name="slide" id="c1" checked>
-            <label for="c1" class="card">
+            <label  for="c1" class="card">
               <div class="row card-title">
                 <div class="icon">1</div>
                 <div class="description">
@@ -53,6 +74,8 @@
                 </div>
               </div>
             </label>
+          </div>
+          <div #carrouseloption>
             <input type="radio" name="slide" id="c2">
             <label for="c2" class="card">
               <div class="row card-title">
@@ -63,6 +86,8 @@
                 </div>
               </div>
             </label>
+          </div>
+          <div #carrouseloption>
             <input type="radio" name="slide" id="c3">
             <label for="c3" class="card">
               <div class="row card-title">
@@ -73,6 +98,8 @@
                 </div>
               </div>
             </label>
+          </div>
+          <div #carrouseloption>
             <input type="radio" name="slide" id="c4">
             <label for="c4" class="card">
               <div class="row card-title">
@@ -85,25 +112,25 @@
             </label>
           </div>
         </div>
-      </section>
-
-      <section class="shadow-2xl mx-auto rounded-xl  md:w-3/4 lg:w-2/4 neo py-8 px-4">
-        <h2 class="text-center text-[3rem] text-primary font-light">
-          NUESTRA MISIÓN
-        </h2>
-        <div class="flex flex-col">
-          <div class="my-auto">
-            <p class="text-xl text-slate-500 text-center">
-              Idear e implementar software enfocado en mejorar la productividad y descubrir
-              nuevas formas de eficientar el trabajo de nuestros clientes.
-            </p>
-            <div class="flex mt-3">
-              <img src="../../../../assets/images/logo/logo.png" height="100px" width="100px" class="mx-auto" alt="Ofnos">
-            </div>
-          </div>
-        </div>
-      </section>
-
+      </div>
     </section>
   </section>
-</section>
+    
+    <section class="shadow-2xl mx-auto rounded-xl  md:w-3/4 lg:w-2/4 neo py-8 px-4">
+      <h2 class="text-center text-[3rem] text-primary font-light">
+        NUESTRA MISIÓN
+      </h2>
+      <div class="flex flex-col">
+        <div class="my-auto">
+          <p class="text-xl text-slate-500 text-center">
+            Idear e implementar software enfocado en mejorar la productividad y descubrir
+            nuevas formas de eficientar el trabajo de nuestros clientes.
+          </p>
+          <div class="flex mt-3">
+            <img src="../../../../assets/images/logo/logo.png" height="100px" width="100px" class="mx-auto" alt="Ofnos">
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </section>
