--- a/angular/src/app/views/public/home/home.component.html
+++ b/angular/src/app/views/public/home/home.component.html
@@ -1,120 +1,9 @@
 <section class="space-background">
 
-  <div class="dot1 absolute right-1/4 -top-1/4">
-  </div>
-  <div class="dot1-inner absolute right-1/4 -top-1/4">
-  </div>
-
-  <div class="dot1 absolute left-30 -bottom-1/4">
-  </div>
-
-  <section class="container max-w-7xl mx-auto px-5 header-padding text-white mb-8">
-    <section class="screen-height-no-header px-10 flex items-center min-h-[580px] sm:min-h-full">
-      <section class="pt-10 mb-8">
-        <div class="">
-          <h1 class="text-[3rem] sm:text-[4rem] leading-none mb-3 text-center">
-            <span class="font-extralight">
-              Expertos en
-            </span>
-            <span class="font-bold">Idear, Crear e </span>
-            <span class="font-bold text-gradient">Innovar</span>
-          </h1>
-          
-          <p class="text-center text-slate-500 mt-10 text-xl sm:text-2xl">
-            En Ofnos, desarrollamos software personalizado con la mejor calidad enfocado en satisfacer todas las necesidades de nuestros clientes.
-          </p>
-          <div class="text-center mt-6">
-            <button class="rounded-full text-white bg-sky-600 py-3 px-5">
-              Contactanos
-            </button>
-          </div>
-        </div>
-      </section>
-    </section>
-  </section>
+  <app-hero></app-hero>
   
 
-  <section class="mx-auto px-5 text-white bg-[#0f171d] relative">
-    <svg class="absolute inset-0" width="100%" height="100%"
-      xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <pattern id="servicesPattern" patternUnits="userSpaceOnUse" width="60" height="60"
-          patternTransform="scale(0.4) rotate(0)">
-          <rect x="0" y="0" width="100%" height="100%" fill="transparent"></rect>
-          <path
-            d="M 4.95 2.7 a 2.25 2.25 90 0 1 -2.25 2.25 a 2.25 2.25 90 0 1 -2.25 -2.25 a 2.25 2.25 90 0 1 2.25 -2.25 a 2.25 2.25 90 0 1 2.25 2.25"
-            stroke-width="1" stroke="none" fill="rgb(38, 59, 77)"></path>
-        </pattern>
-      </defs>
-      <rect width="100%" height="100%" transform="translate(15,20)" fill="url(#servicesPattern)"></rect>
-    </svg>
-    <section class="relative">
-      <div class="mx-4 my-5 text-center">
-        <h2 class="pt-6 text-sky-600 font-bold">
-          Servicios
-        </h2>
-        <h3 class="text-[3rem] my-4 font-extrabold leading-none">
-          Nuestro trabajo
-        </h3>
-        <p class="text-slate-400">
-          Con experiencia en múltiples áreas, ofrecemos una gran variedad de 
-          soluciones para satisfacer cualquier necesidad tecnológica.
-        </p>
-      </div>
-      <div class="wrapper pb-10">
-        <div class="card-container">
-          <div #carrouseloption>
-            <input type="radio" name="slide" id="c1" checked>
-            <label  for="c1" class="card">
-              <div class="row card-title">
-                <div class="icon">1</div>
-                <div class="description">
-                  <h4>Software a la medida</h4>
-                  <p>Creamos soluciones específicas a cualquier tipo de necesidad.</p>
-                </div>
-              </div>
-            </label>
-          </div>
-          <div #carrouseloption>
-            <input type="radio" name="slide" id="c2">
-            <label for="c2" class="card">
-              <div class="row card-title">
-                <div class="icon">2</div>
-                <div class="description">
-                  <h4>Soluciones listas</h4>
-                  <p>Contamos con diversas aplicaciones listas para ser utilizadas.</p>
-                </div>
-              </div>
-            </label>
-          </div>
-          <div #carrouseloption>
-            <input type="radio" name="slide" id="c3">
-            <label for="c3" class="card">
-              <div class="row card-title">
-                <div class="icon">3</div>
-                <div class="description">
-                  <h4>Automatización de procesos</h4>
-                  <p>Ideamos formas de automatizar tareas en cualquier flujo de trabajo.</p>
-                </div>
-              </div>
-            </label>
-          </div>
-          <div #carrouseloption>
-            <input type="radio" name="slide" id="c4">
-            <label for="c4" class="card">
-              <div class="row card-title">
-                <div class="icon">4</div>
-                <div class="description">
-                  <h4>Soporte</h4>
-                  <p>Ofrecemos servicios de soporte relacionados al área de IT.</p>
-                </div>
-              </div>
-            </label>
-          </div>
-        </div>
-      </div>
-    </section>
-  </section>
+  <app-services-carousel></app-services-carousel>
     
     <section class="shadow-2xl mx-auto rounded-xl  md:w-3/4 lg:w-2/4 neo py-8 px-4">
       <h2 class="text-center text-[3rem] text-primary font-light">
