--- a/angular/src/app/components/core/header/header.component.html
+++ b/angular/src/app/components/core/header/header.component.html
@@ -12,7 +12,7 @@
     <section class="text-light-primary flex items-center justify-end">
       <a class="mr-5 cursor-pointer">Inicio</a>
       <a class="mr-5 cursor-pointer">Servicios</a>
-      <a class="mr-5 cursor-pointer">Aliados</a>
+      <a class="mr-5 cursor-pointer">Clientes</a>
       <a class="mr-5 cursor-pointer">Contacto</a>
       <span class="material-icons-round text-2xl cursor-pointer">search</span>
     </section>
