--- a/angular/src/app/views/public/home/home.component.html
+++ b/angular/src/app/views/public/home/home.component.html
@@ -2,24 +2,8 @@
 
   <app-hero></app-hero>
   
-
   <app-services-carousel></app-services-carousel>
-    
-    <section class="shadow-2xl mx-auto rounded-xl  md:w-3/4 lg:w-2/4 neo py-8 px-4">
-      <h2 class="text-center text-[3rem] text-primary font-light">
-        NUESTRA MISIÓN
-      </h2>
-      <div class="flex flex-col">
-        <div class="my-auto">
-          <p class="text-xl text-slate-500 text-center">
-            Idear e implementar software enfocado en mejorar la productividad y descubrir
-            nuevas formas de eficientar el trabajo de nuestros clientes.
-          </p>
-          <div class="flex mt-3">
-            <img src="../../../../assets/images/logo/logo.png" height="100px" width="100px" class="mx-auto" alt="Ofnos">
-          </div>
-        </div>
-      </div>
-    </section>
+  
+  <app-allies></app-allies>
 
   </section>
