fix: responsive header and allies

--- a/angular/src/app/components/home-components/hero/hero.component.html
+++ b/angular/src/app/components/home-components/hero/hero.component.html
@@ -1,12 +1,12 @@
-<section>
+<section id="home">
   <div class="dot1 absolute right-1/4 -top-1/4">
   </div>
   <div class="dot1-inner absolute right-1/4 -top-1/4">
   </div>
-  
+
   <div class="dot1 absolute left-30 -bottom-1/4">
   </div>
-  
+
   <section class="container max-w-7xl mx-auto px-5 header-padding text-white mb-8">
     <section class="screen-height-no-header px-10 flex items-center min-h-[580px] sm:min-h-full">
       <section class="pt-10 mb-8">
@@ -18,15 +18,16 @@
             <span class="font-bold">Idear, Crear e </span>
             <span class="font-bold text-gradient">Innovar</span>
           </h1>
-  
+
           <p class="text-center text-slate-500 mt-10 text-xl sm:text-2xl">
             En Ofnos, desarrollamos software personalizado con la mejor calidad enfocado en satisfacer todas las
             necesidades de nuestros clientes.
           </p>
           <div class="text-center mt-6">
-            <button class="rounded-full text-white bg-sky-600 py-3 px-5">
-              Contactanos
-            </button>
+            <a class="rounded-full text-white bg-sky-600 py-3 px-5"
+              href="mailto:contact@ofnos.com?subject=Solicitud de contacto">
+              Contáctanos
+            </a>
           </div>
         </div>
       </section>
