--- a/angular/src/app/components/core/footer/footer.component.html
+++ b/angular/src/app/components/core/footer/footer.component.html
@@ -6,7 +6,7 @@
     </span>
   </section>
 
-  <section class="grid grid-cols-1 sm:grid-cols-2">
+  <section class="grid grid-cols-1 sm:grid-cols-2" id="contact">
     <section class="mb-10">
       <h4 class="text-2xl font-bold mb-2">
         Contacto
