--- a/angular/src/app/components/core/header/header.component.html
+++ b/angular/src/app/components/core/header/header.component.html
@@ -4,17 +4,28 @@
 
     <section class="flex items-center">
       <img src="../../../../assets/images/logo/logo.png" height="40px" width="40px" class="mr-2" alt="Logo">
-      <span class="header-name text-primary font-bold">
+      <span class="header-name text-primary font-bold hidden xs:inline">
         OFNOS
       </span>
     </section>
 
     <section class="text-light-primary flex items-center justify-end">
-      <a class="mr-5 cursor-pointer">Inicio</a>
-      <a class="mr-5 cursor-pointer">Servicios</a>
-      <a class="mr-5 cursor-pointer">Clientes</a>
-      <a class="mr-5 cursor-pointer">Contacto</a>
-      <span class="material-icons-round text-2xl cursor-pointer">search</span>
+      <a class="mr-5 cursor-pointer" href="home#home">
+        <span class="hidden sm:inline">Inicio</span>
+        <span class="inline sm:hidden material-icons">home</span>
+      </a>
+      <a class="mr-5 cursor-pointer" href="home#services">
+        <span class="hidden sm:inline">Servicios</span>
+        <span class="inline sm:hidden material-icons">design_services</span>
+      </a>
+      <a class="mr-5 cursor-pointer" href="home#clients">
+        <span class="hidden sm:inline">Clientes</span>
+        <span class="inline sm:hidden material-icons">handshake</span>
+      </a>
+      <a class="mr-5 cursor-pointer" href="home#contact">
+        <span class="hidden sm:inline">Contacto</span>
+        <span class="inline sm:hidden material-icons">contact_support</span>
+      </a>
     </section>
 
   </div>
