--- a/angular/src/app/components/home-components/allies/allies.component.html
+++ b/angular/src/app/components/home-components/allies/allies.component.html
@@ -1,4 +1,4 @@
-<section class="mx-auto px-5 text-white">
+<section id="clients" class="mx-auto px-5 text-white">
   <div class="mx-4 my-5 text-center">
     <h2 class="pt-6 text-sky-600 font-bold">
       Clientes
@@ -11,10 +11,8 @@
     </p>
   </div>
 
-  <section id="allies-images" class="grid grid-cols-4 gap-10 mx-10 justify-items-center mb-11">
-    <div></div>
+  <section id="allies-images" class="flex flex-wrap justify-center mb-11">
     <img src="../../../../assets/images/allies/best-md-logo.png" alt="Best MD" height="80px" class="max-w-[100%] max-h-[80px]">
     <img src="../../../../assets/images/allies/beemad-logo.png" alt="BeeMad" height="80px" class="max-w-[100%] max-h-[80px]">
-    <div></div>
   </section>
 </section>
