--- a/angular/src/app/components/home-components/services-carousel/services-carousel.component.html
+++ b/angular/src/app/components/home-components/services-carousel/services-carousel.component.html
@@ -1,4 +1,4 @@
-<section class="mx-auto px-5 text-white bg-[#0f171d] relative">
+<section id="services" class="mx-auto px-5 text-white bg-[#0f171d] relative">
   <svg class="absolute inset-0" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
     <defs>
       <pattern id="servicesPattern" patternUnits="userSpaceOnUse" width="60" height="60"
