feat: fade in animation

--- a/angular/src/app/views/public/home/home.component.html
+++ b/angular/src/app/views/public/home/home.component.html
@@ -1,9 +1,9 @@
 <section class="space-background">
 
-  <app-hero></app-hero>
+  <app-hero #hero class="fade-in"></app-hero>
   
-  <app-services-carousel></app-services-carousel>
+  <app-services-carousel class="fade-in"></app-services-carousel>
   
-  <app-allies></app-allies>
+  <app-allies class="fade-in"></app-allies>
 
 </section>
