--- a/angular/src/app/views/public/home/home.component.scss
+++ b/angular/src/app/views/public/home/home.component.scss
@@ -1,6 +1,11 @@
+.fade-in {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 2s all ease;
+}
 
-.neo {
-  background: #111a22;
-  box-shadow: 10px 10px 20px #0c1218,
-              -10px -10px 20px #16222c;
+.fade-in.active {
+  transform: translateY(0);
+  opacity: 1;
 }
