--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -14,6 +14,9 @@ $primary-color: rgb(66, 105, 170);
 $primary-light-color: rgb(115, 136, 169);
 $secondary-color: rgb(211, 212, 217);
 
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: Raleway, Arial, Helvetica, sans-serif;
