add multiple language support

--- a/angular/src/app/components/home-components/allies/allies.component.html
+++ b/angular/src/app/components/home-components/allies/allies.component.html
@@ -1,13 +1,13 @@
 <section id="clients" class="mx-auto px-5 text-white">
   <div class="mx-4 my-5 text-center">
     <h2 class="pt-6 text-sky-600 font-bold">
-      Clientes
+      {{ 'clients.title' | transloco }}
     </h2>
     <h3 class="text-[3rem] my-4 font-extrabold leading-none">
-      Casos de éxito
+      {{ 'clients.subtitle' | transloco }}
     </h3>
     <p class="text-slate-400">
-      Creamos grandes productos para todo tipo de empresas. Ellos ya confían en nosotros.
+      {{ 'clients.description' | transloco }}.
     </p>
   </div>
 
