--- a/angular/src/app/components/home-components/hero/hero.component.html
+++ b/angular/src/app/components/home-components/hero/hero.component.html
@@ -13,20 +13,19 @@
         <div class="">
           <h1 class="text-[3rem] sm:text-[4rem] leading-none mb-3 text-center">
             <span class="font-extralight">
-              Expertos en
+              {{ 'hero.title.light' | transloco}}
             </span>
-            <span class="font-bold">Idear, Crear e </span>
-            <span class="font-bold text-gradient">Innovar</span>
+            <span class="font-bold">{{ 'hero.title.bold' | transloco}} </span>
+            <span class="font-bold text-gradient">{{ 'hero.title.color' | transloco}}</span>
           </h1>
 
           <p class="text-center text-slate-500 mt-10 text-xl sm:text-2xl">
-            En Ofnos, desarrollamos software personalizado con la mejor calidad enfocado en satisfacer todas las
-            necesidades de nuestros clientes.
+            {{ 'hero.subtitle' | transloco }}.
           </p>
           <div class="text-center mt-6">
             <a class="rounded-full text-white bg-sky-600 py-3 px-5"
-              href="mailto:contact@ofnos.com?subject=Solicitud de contacto">
-              Contáctanos
+              href="mailto:software@ofnos.com?subject=Solicitud de contacto">
+              {{ 'hero.contact-us' | transloco}}
             </a>
           </div>
         </div>
