--- a/angular/src/app/components/home-components/services-carousel/services-carousel.component.html
+++ b/angular/src/app/components/home-components/services-carousel/services-carousel.component.html
@@ -14,14 +14,13 @@
   <section class="relative">
     <div class="mx-4 my-5 text-center">
       <h2 class="pt-6 text-sky-600 font-bold">
-        Servicios
+        {{ 'services.title' | transloco }}
       </h2>
       <h3 class="text-[3rem] my-4 font-extrabold leading-none">
-        Nuestro trabajo
+        {{ 'services.subtitle' | transloco }}
       </h3>
       <p class="text-slate-400">
-        Con experiencia en múltiples áreas, ofrecemos una gran variedad de
-        soluciones para satisfacer cualquier necesidad tecnológica.
+        {{ 'services.description' | transloco }}.
       </p>
     </div>
     <div class="wrapper pb-10">
@@ -32,8 +31,8 @@
             <div class="row card-title">
               <div class="icon">1</div>
               <div class="description">
-                <h4>Software a la medida</h4>
-                <p>Creamos soluciones específicas a cualquier tipo de necesidad.</p>
+                <h4>{{ 'services.custom-software.title' | transloco }}</h4>
+                <p>{{ 'services.custom-software.description' | transloco }}.</p>
               </div>
             </div>
           </label>
@@ -44,8 +43,8 @@
             <div class="row card-title">
               <div class="icon">2</div>
               <div class="description">
-                <h4>Soluciones listas</h4>
-                <p>Contamos con diversas aplicaciones listas para ser utilizadas.</p>
+                <h4>{{ 'services.built-solutions.title' | transloco }}</h4>
+                <p>{{ 'services.built-solutions.description' | transloco }}.</p>
               </div>
             </div>
           </label>
@@ -56,8 +55,8 @@
             <div class="row card-title">
               <div class="icon">3</div>
               <div class="description">
-                <h4>Automatización de procesos</h4>
-                <p>Ideamos formas de automatizar tareas en cualquier flujo de trabajo.</p>
+                <h4>{{ 'services.processes-automation.title' | transloco }}</h4>
+                <p>{{ 'services.processes-automation.description' | transloco }}.</p>
               </div>
             </div>
           </label>
@@ -68,8 +67,8 @@
             <div class="row card-title">
               <div class="icon">4</div>
               <div class="description">
-                <h4>Soporte</h4>
-                <p>Ofrecemos servicios de soporte relacionados al área de IT.</p>
+                <h4>{{ 'services.support.title' | transloco }}</h4>
+                <p>{{ 'services.support.description' | transloco }}.</p>
               </div>
             </div>
           </label>
