--- a/angular/src/app/components/core/footer/footer.component.html
+++ b/angular/src/app/components/core/footer/footer.component.html
@@ -9,23 +9,23 @@
   <section class="grid grid-cols-1 sm:grid-cols-2" id="contact">
     <section class="mb-10">
       <h4 class="text-2xl font-bold mb-2">
-        Contacto
+        {{ 'footer.contact.title' | transloco }}
       </h4>
       <div class="ms-4">
         <div class="mt-2">
           <h5 class="text-xl font-semibold">
-            Email
+            {{ 'footer.contact.email' | transloco }}
           </h5>
           <p>
-            <a href="mailto:contact@ofnos.com">contact&#64;ofnos.com</a>
+            <a href="mailto:software@ofnos.com">software&#64;ofnos.com</a>
           </p>
         </div>
         <div class="mt-2">
           <h5 class="text-xl font-semibold">
-            Teléfono
+            {{ 'footer.contact.phone' | transloco }}
           </h5>
           <p>
-            +52 33 1133 3739
+            +52 33 4626 3238
           </p>
         </div>
       </div>
@@ -33,15 +33,15 @@
     <section>
       <div class="mb-5">
         <h4 class="text-2xl font-bold">
-          Oficinas
+          {{ 'footer.office.title' | transloco }}
         </h4>
         <p class="ms-4 mb-5">
-          <a href="https://maps.app.goo.gl/PkJpNovsZzxC8LAo9" target="_blank">Calz. Central 270, Granja, 45010 Zapopan, Jal.</a><br>
+          <a href="https://maps.app.goo.gl/PkJpNovsZzxC8LAo9" target="_blank">Calz. Central 270, Granja, 45010 Zapopan, Jal., México</a><br>
           Oficina 906
         </p>
         <a class="rounded-full text-white bg-sky-600 py-3 px-4"
-        href="mailto:contact@ofnos.com?subject=Cita de contacto">
-          Agendar una cita
+        href="mailto:software@ofnos.com?subject=Cita de contacto">
+          {{ 'footer.office.book-appointment' | transloco }}
         </a>
       </div>
     </section>
