--- a/angular/src/app/components/core/header/header.component.html
+++ b/angular/src/app/components/core/header/header.component.html
@@ -11,19 +11,19 @@
 
     <section class="text-light-primary flex items-center justify-end">
       <a class="mr-5 cursor-pointer" href="home#home">
-        <span class="hidden sm:inline">Inicio</span>
+        <span class="hidden sm:inline">{{ 'header.home' | transloco }}</span>
         <span class="inline sm:hidden material-icons">home</span>
       </a>
       <a class="mr-5 cursor-pointer" href="home#services">
-        <span class="hidden sm:inline">Servicios</span>
+        <span class="hidden sm:inline">{{ 'header.services' | transloco }}</span>
         <span class="inline sm:hidden material-icons">design_services</span>
       </a>
       <a class="mr-5 cursor-pointer" href="home#clients">
-        <span class="hidden sm:inline">Clientes</span>
+        <span class="hidden sm:inline">{{ 'header.clients' | transloco }}</span>
         <span class="inline sm:hidden material-icons">handshake</span>
       </a>
       <a class="mr-5 cursor-pointer" href="home#contact">
-        <span class="hidden sm:inline">Contacto</span>
+        <span class="hidden sm:inline">{{ 'header.contact' | transloco }}</span>
         <span class="inline sm:hidden material-icons">contact_support</span>
       </a>
     </section>
